# phrasic

./: .dockerignore  .gitignore  .oxlintrc.json  .prettierignore  Caddyfile  Cargo.toml  Dockerfile  README.md  bunfig.toml  eslint.config.js  example.appconfig.json  flake.nix  index.html  package-lock.json  package.json  tsconfig.browser.json  tsconfig.domain.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.husky/: pre-commit  pre-push
app/: layout.tsx  page.tsx
browser/: application.ts  config.ts  configuration-fetch.ts  configuration-response.ts  fetch.ts  globals.css  main.tsx  request-deadline.ts  styles.d.ts
components/: NowPlaying.tsx
crates/phrasic/: Cargo.toml
crates/phrasic/src/: command.rs  main.rs
crates/phrasic/src/platform/: linux.rs  windows.rs
crates/phrasic/tests/: cli.rs
deploy/: static-host-headers.md
docs/: browser-platform-measurements.md  fake-music-integration.md  generate-fake-music-flow.sh  overlay-measurements.md  spotify-display-policy.md
domain/: playback-item.ts  playback-stream.ts  playback-values.ts  playback.ts  result.ts
fake/: index.html
scripts/: build.ts  clean.ts  dev.ts  serve.ts  verify-rust-target-isolation.sh
server/: host.ts  manifest.ts  published-files.ts  response-policy.ts  runtime.ts
spikes/grpc-native-ipc/: .gitattributes  Cargo.toml  EVIDENCE.md  package.json  tsconfig.json
spikes/grpc-native-ipc/browser/: index.html  probe.ts
spikes/grpc-native-ipc/native/: Cargo.toml  build.rs
spikes/grpc-native-ipc/native/src/: main.rs
spikes/grpc-native-ipc/native/src/platform/: linux.rs  windows.rs
spikes/grpc-native-ipc/proto/: spike.proto
spikes/grpc-native-ipc/scripts/: build.ts
spikes/grpc-native-ipc/terminator/: deadline-status.ts  main.ts
spikes/grpc-native-ipc/test/: deadline-status.probe.ts  interoperability.probe.ts
(+171 files in other folders)
