[workspace]
members = ["native"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.88"
version = "0.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
